fix: 故障诊断collapse逻辑优化 --Bug=121992229 (#5571)

--- a/bkmonitor/webpack/src/fta-solutions/pages/event/event-detail/aiops/troubleshooting-collapse.scss
+++ b/bkmonitor/webpack/src/fta-solutions/pages/event/event-detail/aiops/troubleshooting-collapse.scss
@@ -3,10 +3,6 @@
   width: 100%;
   height: 100%;
 
-  .blue-txt {
-    color: #3a84ff;
-  }
-
   .aiops-troubleshooting-info {
     width: 100%;
     padding: 12px 16px;
@@ -24,6 +20,7 @@
 
     .info-item {
       display: flex;
+      height: 28px;
       line-height: 28px;
 
       .info-label,
@@ -33,6 +30,17 @@
 
       .info-txt {
         flex: 1;
+        width: calc(100% - 62px);
+
+        .blue-txt {
+          display: inline-block;
+          width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          cursor: pointer;
+          color: #3a84ff;
+        }
       }
 
       .info-label {
